<resources>
    <string name="fullname">Josuan Leonardo</string>
    <string name="nim">00000027571</string>
    <string name="kelas">Class BL</string>
    <string name="ref_judul">Referensi</string>
    <string name="ref_utub">Youtube : https://www.youtube.com/watch?v=9QOg8R8ol1w</string>
    <string name="ref_utub2">https://www.youtube.com/watch?v=9QOg8R8ol1w</string>
    <string name="ref_utub3">https://www.youtube.com/watch?v=tlOGecRQeOo&amp;t=1028s</string>
    <string name="ref_utub4">https://www.youtube.com/watch?v=5PaWtQAOdi8</string>
    <string name="ref_utub5">https://www.youtube.com/watch?v=74BMukDxEr8</string>
    <string name="ref_utub6">https://www.youtube.com/watch?v=NM9RbDGl5C8</string>
    <string name="ref_utub7">https://www.youtube.com/watch?v=oh4YOj9VkVE&amp;t=316s</string>
    <string name="welcomemsg">Welcome, Josuan Leonardo 00000027571</string>
    <string name="oke">OKAY</string>
    <string name="playing">Now Playing</string>
    <string name="logout">Logout</string>

    <!-- Success Messages -->
    <string name="resource_created_successfully">%s created successfully!</string>
    <string name="resource_updated_successfully">%s updated successfully!</string>

    <!-- Error Messages -->
    <string name="error_field_required">%s cannot be empty</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_password_too_short">Password must be at least 8 characters</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="error_saving_user_data">Error saving user data.</string>
    <string name="resource_failed">%s failed.</string>
    <string name="resource_update_failed">%s update failed.</string>
    <string name="sign_in_failed">Invalid email or password</string>
    <string name="failed_to_load_user">Failed to load user data.</string>

    <!-- Field Names -->
    <string name="field_first_name">First name</string>
    <string name="field_last_name">Last name</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="field_confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="icon">Icon</string>
    <string name="field_playlist_name">Playlist name</string>
    <string name="field_playlist_details">By you • 0 songs</string>
    <string name="field_music_title">Music title</string>
    <string name="field_artist">Artist name</string>
    <string name="field_duration">03:45</string>

    <!-- Strings -->
    <string name="authentication">Authentication</string>
    <string name="account">Account</string>
    <string name="app_name">MusicPlay</string>
    <string name="app_logo">Music play logo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="or">Or</string>
    <string name="home">Home</string>
    <string name="playlist">Playlist</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="tabs">Tabs</string>
    <string name="greeting">Good morning, Alex 👋</string>
    <string name="encouragement">Let’s vibe with your favorite tracks!</string>
    <string name="recent">Recently Listened</string>
    <string name="local_songs">Your Local Songs</string>
    <string name="top_songs">Top songs</string>
    <string name="new_release">New release</string>
</resources>